--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <input type="password" name="password" class="passwordInput">
             </form>
             <div class="signButton">Sign in</div>
+            <div class="showTableButton">Show datatable</div>
+            <div class="DBTable"></div>
         </div>
     </section>
     <script src="./jquery-3.7.1.min (1).js"></script>
